--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^2.1.0
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^2.1.0
+  flutter_svg: ^1.0.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +46,7 @@ flutter:
   assets:
     - assets/
     - assets/sample_data/
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
