--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   uuid: ^3.0.4
   textfield_tags: ^1.4.2
   smooth_page_indicator: ^1.0.0+2
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
