--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,13 @@ dependencies:
   textfield_tags: ^1.4.2
   smooth_page_indicator: ^1.0.0+2
   shared_preferences: ^2.0.7
+  json_annotation: ^4.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.1
+  json_serializable: ^4.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
