--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   shared_preferences: ^2.0.7
   json_annotation: ^4.1.0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
