--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   http: ^0.13.3
   chopper: ^4.0.1
   logging: ^1.0.1
+  firebase_core: ^1.6.0
+  cloud_firestore: ^2.5.3
 
 dev_dependencies:
   flutter_test:
