--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   synchronized: ^3.0.0
   sqlbrite: ^2.1.0
   firebase_auth: ^3.1.1
+  image_picker: ^0.8.0+1
+  firebase_storage: ^10.2.0
 
 dev_dependencies:
   flutter_test:
