--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^3.1.1
   image_picker: ^0.8.0+1
   firebase_storage: ^10.2.0
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
