--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^0.8.0+1
   firebase_storage: ^10.2.0
   dio: ^4.0.4
+  epub_viewer: 0.2.4
 
 dev_dependencies:
   flutter_test:
